@@ -160,85 +160,6 @@
 
   <profiles>
     <profile>
-      <id>jts-jacorb</id>
-      <activation>
-        <property>
-          <name>!jacorb-disabled</name>
-        </property>
-      </activation>
-
-      <dependencies>
-        <!-- pull in IDL stubs for each supported ORB (JacORB and Sun) -->
-        <dependency>
-          <groupId>org.jboss.narayana.jts</groupId>
-          <artifactId>jacorb-idl</artifactId>
-          <version>${project.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.narayana.jts</groupId>
-          <artifactId>jacorb-idl</artifactId>
-          <version>${project.version}</version>
-          <type>test-jar</type>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.jacorb</groupId>
-          <artifactId>jacorb</artifactId>
-          <version>${version.org.jacorb.jacorb}</version>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <groupId>org.jacorb</groupId>
-          <artifactId>jacorb-omgapi</artifactId>
-          <version>${version.org.jacorb.jacorb}</version>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>surefire-jacorb</id>
-                <phase>test</phase>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <configuration>
-                  <skip>false</skip>
-                  <argLine>@{surefireArgLine} -Djdk.attach.allowAttachSelf=true</argLine>
-                  <systemProperties combine.children="append">
-                     <property>
-                       <name>java.util.logging.config.file</name>
-                       <value>${basedir}/src/test/resources/logging.properties</value>
-                     </property>
-                  </systemProperties>
-		  <excludes>
-                    <exclude>**/common/**</exclude>
-                    <exclude>**/ExampleXAResource.java</exclude>
-                    <exclude>**/JTSTestCase.java</exclude>
-                    <exclude>**/LastOnePhaseResource.java</exclude>
-                    <exclude>**/implicit/**</exclude>
-                    <exclude>**/subordinate/TransactionImpleUnitTest.java</exclude>
-                  </excludes>
-                  <classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:idlj-idl-openjdk</classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:idlj-idl-openjdk:tests</classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl</classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl:test-jar</classpathDependencyExcludes>
-                  </classpathDependencyExcludes>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <profile>
       <!--
        Use a fork of the jdk orb.
        This profile builds on the jts-idlj profile and adds the openjdk orb classes to the bootclasspath
@@ -300,8 +221,6 @@
                   </excludes>
                   <reportsDirectory>${project.build.directory}/idlj-openjdk-surefire-reports</reportsDirectory>
                   <classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl</classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl:test-jar</classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl</classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl:test-jar</classpathDependencyExcludes>
                   </classpathDependencyExcludes>
@@ -371,8 +290,6 @@
                   </excludes>
                   <reportsDirectory>${project.build.directory}/ibmorb-surefire-reports</reportsDirectory>
                   <classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl</classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl:test-jar</classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:idlj-idl-openjdk</classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:idlj-idl-openjdk:tests</classpathDependencyExcludes>
                   </classpathDependencyExcludes>
