@@ -148,104 +148,6 @@
   
   <profiles>
     <profile>
-      <id>jts-jacorb</id>
-      <activation>
-        <property>
-          <name>!jacorb-disabled</name>
-        </property>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>org.jacorb</groupId>
-          <artifactId>jacorb</artifactId>
-          <version>${version.org.jacorb.jacorb}</version>
-          <scope>provided</scope>
-        </dependency>
-        <!-- pull in IDL stubs for each supported ORB (JacORB and Sun) -->
-        <dependency>
-          <groupId>org.jboss.narayana.jts</groupId>
-          <artifactId>jacorb-idl</artifactId>
-          <version>${project.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.narayana.jts</groupId>
-          <artifactId>jacorb-idl</artifactId>
-          <version>${project.version}</version>
-          <type>test-jar</type>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>jacorb-compile</id>
-                <goals>
-                  <goal>compile</goal>
-                </goals>
-                <configuration>
-                  <excludes>
-                    <exclude>**/javaidl/**</exclude>
-                    <exclude>**/ibmorb/**</exclude>
-                  </excludes>
-                </configuration>
-              </execution>
-              <execution>
-                <id>jacorb-testCompile</id>
-                <goals>
-                  <goal>testCompile</goal>
-                </goals>
-                <configuration>
-                  <testExcludes>
-                    <exclude>**/PropertyInitTest.java</exclude>
-                    <exclude>**/PropertyInitTest3.java</exclude>
-                  </testExcludes>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>surefire-jacorb</id>
-                <phase>test</phase>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <configuration>
-                  <argLine>@{surefireArgLine} -Djdk.attach.allowAttachSelf=true</argLine>
-                  <reportsDirectory>${project.build.directory}/jacorb-surefire-reports</reportsDirectory>
-                  <systemProperties combine.children="append"/>
-                  <excludes>
-                    <exclude>**/initialisation/postinit/**</exclude>
-                    <exclude>**/initialisation/postset/**</exclude>
-                    <exclude>**/initialisation/preinit/**</exclude>
-                    <exclude>**/initialisation/TestAttributeCallback.java</exclude>
-                    <exclude>**/SimpleObjectImpl.java</exclude>
-                    <exclude>**/TestAttributeCallback.java</exclude>
-                    <exclude>**/PropertyInitTest.java</exclude>
-                    <exclude>**/PropertyInitTest3.java</exclude>
-                  </excludes>
-                  <classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:idlj-idl-openjdk</classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:idlj-idl-openjdk:tests</classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl</classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl:test-jar</classpathDependencyExcludes>
-                  </classpathDependencyExcludes>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <profile>
       <id>jts-openjdk</id>
       <activation>
         <property>
@@ -286,7 +188,6 @@
                 </goals>
                 <configuration>
                   <excludes>
-                    <exclude>**/jacorb/**</exclude>
                     <exclude>**/ibmorb/**</exclude>
                   </excludes>
                 </configuration>
@@ -331,8 +232,6 @@
                   </excludes>
                   <reportsDirectory>${project.build.directory}/idlj-openjdk-surefire-reports</reportsDirectory>
                   <classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl</classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl:test-jar</classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl</classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl:test-jar</classpathDependencyExcludes>
                   </classpathDependencyExcludes>
@@ -385,7 +284,6 @@
                 </goals>
                 <configuration>
                   <excludes>
-                    <exclude>**/jacorb/**</exclude>
                     <exclude>**/javaidl/**</exclude>
                   </excludes>
                 </configuration>
@@ -429,8 +327,6 @@
                   </excludes>
                   <reportsDirectory>${project.build.directory}/ibmorb-surefire-reports</reportsDirectory>
                   <classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl</classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl:test-jar</classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:idlj-idl-openjdk</classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:idlj-idl-openjdk:tests</classpathDependencyExcludes>
                   </classpathDependencyExcludes>
